get all stories feature has been added to each layer, model, view model, and view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:exported="false"/>
         <activity
             android:name=".view.activity.StoryActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/story_activity_label"/>
         <activity
             android:name=".view.activity.SplashScreenActivity"
             android:exported="true"
