--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     def activity_version = "1.7.0"
     // Kotlin
     implementation "androidx.activity:activity-ktx:$activity_version"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
