--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -44,7 +46,7 @@
             android:exported="false"
             android:label="@string/menu_setting" />
         <activity
-            android:name=".view.activity.MainActivity"
+            android:name=".view.activity.AuthenticationActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.StoryActivity"
